--- a/src/Common/Common.vcxproj
+++ b/src/Common/Common.vcxproj
@@ -143,6 +143,7 @@
     <ClInclude Include="PlatformLinux.inl" />
     <ClInclude Include="PlatformWindows.inl" />
     <ClInclude Include="Util.hpp" />
+    <ClInclude Include="xr_impexp_macros.h" />
     <ClInclude Include="_d3d_extensions.h" />
   </ItemGroup>
   <ItemGroup>
