--- a/src/utils/xrLC/xrLC.vcxproj
+++ b/src/utils/xrLC/xrLC.vcxproj
@@ -315,6 +315,11 @@
     <ClCompile Include="xrSectors.cpp" />
     <ClCompile Include="xrT_Junction.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\xrMiscMath\xrMiscMath.vcxproj">
+      <Project>{7885cf3c-ee04-4c67-9467-1fbf9a36b037}</Project>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
