--- a/.gitmodules
+++ b/.gitmodules
@@ -55,3 +55,6 @@
 [submodule "Externals/nvapi"]
 	path = Externals/nvapi
 	url = https://github.com/OpenXRay/nvapi.git
+[submodule "Externals/pugixml"]
+	path = Externals/pugixml
+	url = https://github.com/zeux/pugixml.git
